--- a/typora/paperglow.css
+++ b/typora/paperglow.css
@@ -620,42 +620,105 @@ blockquote a:hover {
 /* ========================================
    Lists
    ======================================== */
-ul,
+ul {
+    padding-left: 1.55em;
+    margin: 0.55em 0 1em 0;
+    list-style-type: disc;
+}
+
 ol {
-    padding-left: 2em;
-    margin: 0.5em 0 1em 0;
+    padding-left: 1.55em;
+    margin: 0.55em 0 1em 0;
+    list-style-type: decimal;
 }
 
 li {
-    margin: 0.35em 0;
+    margin: 0.34em 0;
     line-height: 1.5;
 }
 
 li>ul,
 li>ol {
-    margin: 0.3em 0;
+    margin: 0.3em 0 0.12em;
+    padding-left: 1.38em;
 }
 
-ul {
-    list-style-type: disc;
-}
-
-ul ul {
+ul > li > ul {
     list-style-type: circle;
 }
 
-ul ul ul {
+ul > li > ul > li > ul {
     list-style-type: square;
 }
 
-ol {
+ul > li > ul > li > ul > li > ul {
+    list-style-type: disc;
+}
+
+ul > li > ul > li > ul > li > ul > li > ul {
+    list-style-type: circle;
+}
+
+ul > li > ul > li > ul > li > ul > li > ul > li > ul {
+    list-style-type: square;
+}
+
+ol > li > ol {
+    list-style-type: lower-alpha;
+}
+
+ol > li > ol > li > ol {
+    list-style-type: lower-roman;
+}
+
+ol > li > ol > li > ol > li > ol {
     list-style-type: decimal;
+}
+
+ol > li > ol > li > ol > li > ol > li > ol {
+    list-style-type: lower-alpha;
+}
+
+ol > li > ol > li > ol > li > ol > li > ol > li > ol {
+    list-style-type: lower-roman;
+}
+
+ul > li > ol {
+    list-style-type: decimal;
+}
+
+ol > li > ul {
+    list-style-type: disc;
+}
+
+ul>li::marker {
+    color: rgba(var(--primary-rgb), 0.82);
+    font-size: 0.9em;
+}
+
+ol>li::marker {
+    color: rgba(var(--primary-rgb), 0.82);
+    font-size: 0.9em;
+    font-variant-numeric: tabular-nums;
+    font-weight: 600;
+}
+
+ol > li > ol > li::marker,
+ol > li > ol > li > ol > li::marker,
+ol > li > ol > li > ol > li > ol > li::marker,
+ol > li > ol > li > ol > li > ol > li > ol > li::marker,
+ol > li > ol > li > ol > li > ol > li > ol > li > ol > li::marker {
+    color: rgba(var(--primary-rgb), 0.82);
+    font-size: 0.9em;
+    font-variant-numeric: tabular-nums;
+    font-weight: 600;
 }
 
 /* Task list */
 .task-list-item {
     list-style-type: none;
-    margin-left: -1.5em;
+    margin-left: -1.45em;
+    padding-left: 0;
 }
 
 .task-list-item input[type="checkbox"] {
